tried resizing to fix white space

--- a/src/index.css
+++ b/src/index.css
@@ -139,8 +139,9 @@ body {
 }
 
 .contact-image {
-    padding: auto;
-    margin: auto;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     height: 110vh;
     width: 100%;
     background-image: url(./assets/img/contactWheels.png);
